--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -1,28 +1,28 @@
 # index page sections
 # custom following lines to edit your index page
-- id: about-me
+- id: about-us
   i18n: nav.about_me
   name: About
   tpl: about.html
   css:
 
-- id: career
-  i18n: nav.career
-  name: Career
-  tpl: career.html
-  css: timeline
+#- id: career
+#  i18n: nav.career
+#  name: Career
+#  tpl: career.html
+#  css: timeline
 
-- id: skills
-  i18n: nav.skills
-  name: Skills
-  tpl: skills.html
-  css: team
+#- id: skills
+#  i18n: nav.skills
+#  name: Skills
+#  tpl: skills.html
+#  css: team
 
-- id: projects
-  i18n: nav.projects
-  name: Projects
-  tpl: projects.html
-  css: project
+#- id: projects
+#  i18n: nav.projects
+#  name: Projects
+#  tpl: projects.html
+#  css: project
 
 - id: blog
   i18n: nav.blog
