--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -3,23 +3,23 @@
   href: /blog/
 
 # edit following lines to custom your blog page, make sure name is the same as href but capitalized first letter(except HTML)
-- name: Python
-  href: /python/
+- name: Code
+  href: /code/
 
-- name: Linux
-  href: /linux/
+#- name: Linux
+#  href: /linux/
 
-- name: HTML
-  href: /html/
+#- name: HTML
+#  href: /html/
 
-- name: Database
-  href: /database/
+#- name: Database
+#  href: /database/
 
-- name: Mac
-  href: /mac/
+#- name: Mac
+#  href: /mac/
 
-- name: Life
-  href: /life/
+- name: Meetings
+  href: /meetings/
 
 # Don't display donation page: change donation to off at file '_config.yml'
 - name: Donate
