--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -1,6 +1,6 @@
 # index page sections
 # custom following lines to edit your index page
-- id: about-us
+- id: about-me
   i18n: nav.about_me
   name: About
   tpl: about.html
