--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,17 @@ author:  # change following line to your infomation.
     twitter_username:  # Leave blank if you don't have now
     email:   # Leave blank if you don't have now
     cv: # An online CV can be printed as PDF, leave blank if you don't have now
+  member3:  # change following line to your infomation.
+    name: Denis  # Be used at blog posts' author.
+    first_name: Denis # Be used at index page about me section.
+    last_name: Vida  # Be used at index page about me section.
+    avatar: /static/assets/img/landing/avatar.jpg  # upload your avatar at directory and edit it.
+    github_username: dvida # Leave blank if you don't have now
+    linkedin_id:  # Leave blank if you don't have now
+    facebook_username:   # Leave blank if you don't have now
+    twitter_username:  # Leave blank if you don't have now
+    email: dvida@uwo.ca  # Leave blank if you don't have now
+    cv: # An online CV can be printed as PDF, leave blank if you don't have now
 
 # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
   skill_icon1:
